# AtriumMind-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-testnet.yml  testnet-deploy.yml
contracts/access-lease/: Cargo.toml
contracts/access-lease/src/: lib.rs
contracts/subscription/: Cargo.toml
contracts/subscription/src/: lib.rs
deployed/: contract-ids.env
